--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -69,14 +69,16 @@ services:
 
           test10: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C('10 + 10')"
           test11: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C"
-          test12: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C(\\u0070\\u0072\\u006F\\u0063\\u0065\\u0073\\u0073)"
-          test13: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C\\u0028\\u0070\\u0072\\u006F\\u0063\\u0065\\u0073\\u0073\\u0029 + ''"
+          test12: "$env.u != undefined ? $env.u : '' + \\u0070\\u0072\\u006F\\u0063\\u0065\\u0073\\u0073"
+          test13: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C(\\u0070\\u0072\\u006F\\u0063\\u0065\\u0073\\u0073)"
+          test14: "$env.u != undefined ? $env.u : '' + \\u0065\\u0076\\u0061\\u006C\\u0028\\u0070\\u0072\\u006F\\u0063\\u0065\\u0073\\u0073\\u0029 + ''"
           
           
-          test14: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C('20 + 20')"
-          test15: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C"
-          test16: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C(\u0070\u0072\u006F\u0063\u0065\u0073\u0073)"
-          test17: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C\u0028\u0070\u0072\u006F\u0063\u0065\u0073\u0073\u0029"
+          test15: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C('20 + 20')"
+          test16: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C"
+          test17: "$env.u != undefined ? $env.u : '' + \u0070\u0072\u006F\u0063\u0065\u0073\u0073"
+          test18: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C(\u0070\u0072\u006F\u0063\u0065\u0073\u0073)"
+          test19: "$env.u != undefined ? $env.u : '' + \u0065\u0076\u0061\u006C\u0028\u0070\u0072\u006F\u0063\u0065\u0073\u0073\u0029"
           
           # [ type: complex js ] -> invalid as mustache {{test3}}
           # won't resolve on the server-side
