--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -96,6 +96,8 @@ services:
           test26: "$env.u != undefined ? $env.u : '\\x65\\x76\\x61\\x6C\\x28\\x29'"
           test27: "$env.u != undefined ? $env.u : '' + \\x65\\x76\\x61\\x6C\\x28\\x29"
           test28: "$env.u != undefined ? $env.u : '' + \\x65\\x76\\x61\\x6C()"
+          test29: "$env.u != undefined ? $env.u : \\x65\\x76\\x61\\x6C\\x28\\x29"
+          test30: "$env.u != undefined ? $env.u : \\x65\\x76\\x61\\x6C()"
           
           # [ type: complex js ] -> invalid as mustache {{test3}}
           # won't resolve on the server-side
