--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -19,8 +19,9 @@ services:
         service_id: 'hostedgit'
         parameters:
           test1: $env.test
-          test2: $$env.test
-          #test2: $env.test || test2
+          test2: $env.test
+          test3: $env.test || test3
+          test4: $$env.test || test4
           #test3: "$env.test || {{test3}}"
           #test4: "$env.test !== undefined ? 'test6_true' : $env.branch"
           #test5: "$env.test || 'test' + '5'"
