--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -69,15 +69,18 @@ services:
           test25: "throw new Error($env.app_repo)"
           test26: "alert($env.dd)"
           test27: "console.log($env.dd)"
-          test28: "$env.dd ? this : super"
-          test29: "try { $env.dd } catch(e){}"
-          test30: "try $env.dd catch(e)"
-          test31: "$env.y + (5 + 2)"
-          test32: "$env.foo ? document.cookie : document"
-          test33: "$env.foo ? process : global"
-          test34: "$env.foo ? Headers : Request"
-          test35: "if($env.foo !== undefined) return Headers else return globalThis"
-          test36: "$env.x($env.y)"
+          test28: "$env.dd !== undefined ? this : super"
+          test29: "$env.dd !== undefined ? this : eval(this)"
+          test30: "$env.dd !== undefined ? this : eval($env.dd)"
+          test31: "$env.dd !== undefined ? this : JSON"
+          test32: "try { $env.dd } catch(e){}"
+          test33: "try $env.dd catch(e)"
+          test34: "$env.y + (5 + 2)"
+          test35: "$env.foo ? document.cookie : document"
+          test36: "$env.foo ? process : global"
+          test37: "$env.foo ? Headers : Request"
+          test38: "if($env.foo !== undefined) return Headers else return globalThis"
+          test39: "$env.x($env.y)"
 
 form:
   pipeline:
