--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -69,10 +69,10 @@ services:
           test25: "throw new Error($env.app_repo)"
           test26: "alert($env.dd)"
           test27: "console.log($env.dd)"
-          test28: "$env.dd !== undefined ? this : super"
-          test29: "$env.dd !== undefined ? this : eval(this)"
-          test30: "$env.dd !== undefined ? this : eval($env.dd)"
-          test31: "$env.dd !== undefined ? this : JSON"
+          test28: "$env.dd !== undefined ? self : super"
+          test29: "$env.dd !== undefined ? eval(escape) : eval(unescape)"
+          test30: "$env.dd !== undefined ? JSON : eval($env.dd)"
+          test31: "$env.dd !== undefined ? args : JSON"
           test32: "try { $env.dd } catch(e){}"
           test33: "try $env.dd catch(e)"
           test34: "$env.y + (5 + 2)"
