--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -8,7 +8,7 @@ template:
     - repo
   info:
     git url: '"[" + $env.repository + "](" + $env.repository + ")"'
-    git branch: '"[" + $env.branch + "](" + $env.repository + ")"'
+    git branch: '"[" + $env.branch + "](" + $env.repository + "/tree/" + $env.branch + ")"'
 
 toolchain:
   name: 'DYML: pipeline.yml Handling'
