--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -16,7 +16,9 @@ toolchain:
 services:
   repo:
     service_id: hostedgit
-    parameters: {}
+    parameters:
+      test: $env.foo >
+        === 'bar123' ? 'hello world' : 'blah'
 
   build:
     service_id: pipeline
