--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -17,7 +17,7 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test: "$env.foo >
+      test: "$env.foo >-
         === 'bar123' ? 'hello world' : 'blah'"
 
   build:
