--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -17,8 +17,10 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test: "$env.foo " >-
-        "=== 'bar123' ? 'hello world' : 'blah'"
+      test: >
+        $env.foo
+        === 'bar123' ?
+        'hello world' : 'blah'
 
   build:
     service_id: pipeline
