--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -8,7 +8,7 @@ template:
     - repo
 
   info:
-    git url: >
+    git url:
       "[" + $env.repository + "]" +
       "(" + $env.repository + ")"
     git branch: >
