--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -1,62 +1,17 @@
-version: '2'
+---
+# This template claims to be version 2 but is really a v1 template, and should be identified
+# as such by feature-detecting on the (absent) toplevel template property.
 
-template:
-  name: "DYML: pipeline.yml Handling"
-  description: "DYML: pipeline.yml Handling"
-  required:
-    - build
-    - repo
+name: "Liar template"
+description: "Description"
+version: 2
+required:
+ - my-repo
 
-  info:
-    git url: >
-      "[" + $env.repository + "]" +
-        "(" + $env.repository + ")"
-    git branch: >
-      "[" + $env.branch + "]" +
-        "(" + $env.repository +
-          "/tree/" + $env.branch + ")"
-
-toolchain:
-  name: 'DYML: pipeline.yml Handling'
-
-services:
-  repo:
-    service_id: hostedgit
-    parameters:
-      test1: >
-        if($env.foo == 1234){
-          88;
-        } else {
-          99;
-        }
-      test2: if($env.foo == "5678"){ 44; } else { 55 };
-      test3: if($env.foo == '9101112'){ 22; } else { 11; }
-      test4: if($env.foo == "736363"){ 231; } else { 244; }
-
-  build:
-    service_id: pipeline
-    parameters:
-      services:
-        - repo
-      name: 'Pipeline 1'
-      ui-pipeline: true
-      configuration:
-        content:
-          $text: pipeline.yml
-        env:
-          REPO: repo
-          USERNAME: '{{form.pipeline.parameters.username}}'
-          PASSWORD: '{{form.pipeline.parameters.password}}'
-          API_KEY: '{{form.pipeline.parameters.api-key}}'
-          SPACE: '{{form.pipeline.parameters.space}}'
-          ORG: '{{form.pipeline.parameters.organization}}'
-          REGION: '{{form.pipeline.parameters.region}}'
-        execute: true
-
-form:
-  pipeline:
-    parameters:
-      username: 'admin'
-      group: 'system'
-    schema:
-      $ref: deploy.json
+my-repo:
+  service_id: githubpublic
+  parameters:
+    repo_name: "hello-world-{{name}}"
+    repo_url: https://github.com/open-toolchain/node-hello-world
+    type: clone
+    has_issues: true
