--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,7 +22,7 @@ services:
   repo:
     service_id: hostedgit
     parameters:
-      test4: if($env.foo == "foo"){ $env.foo; } else { $env.bar; }
+      test4: if($env.foo == "foo"){ return $env.foo; } else { $env.bar; }
 
 form:
   pipeline:
